--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: webflow_api
-description: A starting point for Dart libraries or applications.
+description: A Webflow CMS Dart package.
 version: 1.0.0
-# homepage: https://www.example.com
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
