--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,8 @@ name: webflow_api
 description: A Webflow CMS Dart package.
 version: 0.1.0
 
+repository: https://github.com/InnoFlutter/webflow_api
+
 environment:
   sdk: '>=2.17.6 <3.0.0'
 
